<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grpc_vendor</name>
  <version>0.1.0</version>
  <description>
    Wrapper around gRPC, providing  an ExternalProject build of gRPC.
  </description>

  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  
  <license>Apache License 2.0</license>  <!-- the contents of this package and gRPC are Apache 2.0 -->
  <url type="website">https://grpc.io/</url>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>